[2017/12/1]
+ DimensionStyle property DimRoundoff minimum value is 0.000001 or just zero to indicate no rounding off.
+ Cleanup duplicate code 73 when writing MText entities.
+ The MathHelper.RoundToNearest method will round off correctly the last decimal.
+ (fixed) When reading a dxf if the DimRoundoff value was out of range, it was not set to the correct default value.
+ (fixed) The MText rotation was not calculated correctly when it was not defined in the world XY plane.
+ (fixed) AutoCad 2018 introduced some undocumented changes to the MText entity that broke up the existing code.

[2017/11/28]
+ IMPORTANT: When working directly with streams in read or write operations their positions will not be reseted automatically. See "ReadWriteFromStream()" and ""ReadWriteFromStream2()"" sample in TestDxfDocument project for more details.
+ Added the header DrawingVariables UcsOrg, UcsXDir, and UcsYDir.
+ Added MText property drawing direction.
+ The MathHelper.RoundToNearest method now internally uses a long instead of an int for increased precision. It will still raise an exception if very high numbers and/or very low roundTo values are used.
+ (fixed) Missing read and write code of MText property LineSpacingStyle.

[2017/10/5]
+ Added Vector2 and Vector3 multiplication and division component by component.
+ Added parameter checks for invalid values in several constructors.
+ (fixed) Issues with the clipping boundary in images.
+ (fixed) Issue Id #13554 Issue with image in dxf. While reading a dxf, any Image entity with vector u or v equals to zero will be skipped. 

[2.0.3 - 2017/5/24]
+ Added AutoCad drawing database version number AC1032 = AutoCAD 2018.
+ A block that represents the dimension will be generated if, while loading a dxf, a Dimension entity is found with no associated block.
+ (fixed) The properties of the document viewport (*Active VPort) will be properly loaded.
+ (fixed) Issue Id #13553 Arcs in exploded polylines with zero radius.